--- a/app/views/pages/micamionesedit.html.erb
+++ b/app/views/pages/micamionesedit.html.erb
@@ -142,7 +142,7 @@
                     <div class="col-md-6">
                     <div class="form-group">
                       <%= f.label :city_id, 'Ciudad' %>
-                      <%= f.select(:city_id, [['','' ]], {}, { :class => 'form-control' }) %>
+                      <%= f.collection_select :city_id, @cities.order(:name),:id,:name, {}, { class: 'form-control'} %>
                     </div>
                     </div>
 
@@ -160,7 +160,7 @@
                       <div class="col-md-6">
                         <div class="form-group">
                           <%= f.label :placa_city_id, 'Ciudad placa' %>
-                          <%= f.select(:placa_city_id, [['','' ]], {}, { :class => 'form-control' }) %>
+                          <%= f.collection_select :placa_city_id, @placaCities.order(:name),:id,:name, {}, { class: 'form-control' } %>
                         </div>
                       </div>
 
