--- a/app/views/pages/micamionesnew.html.erb
+++ b/app/views/pages/micamionesnew.html.erb
@@ -231,7 +231,7 @@
 
               </div>
 
-              <script !src="">
+              <script>
                     $(function(){
                         $('#sa').click(function(){
                             $($('.nav-tabs li')[0]).removeClass('active')
@@ -337,7 +337,7 @@
                     <%= f.radio_button :sevendecontrailer, 'No', :checked => false %> No
 
 
-                    <script !src="">
+                    <script >
                       $('input[type=radio]').click(function(){
                           if($('#truck_sevendecontrailer_si').is(':checked')) {
                               $('.extras').show();
@@ -901,7 +901,7 @@
                     <%= f.radio_button :sevendecontrailer, 'No', :checked => false %> No
 
 
-                    <script !src="">
+                    <script >
                         $('input[type=radio]').click(function(){
                             if($('#truck_sevendecontrailer_si').is(':checked')) {
                                 $('.extras').show();
