--- a/app/views/pages/mirepuestos.html.erb
+++ b/app/views/pages/mirepuestos.html.erb
@@ -100,7 +100,7 @@
 
               <td>
                 <%= link_to 'Editar', mirepuestosedit_path(extra.id), :class=>'btn btn-info' %>
-                <%= link_to 'Eliminar',mirepuestosnew_path(extra.id), :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :class=>'btn btn-danger' %>
+                <%= link_to 'Eliminar',mirepuestosdelete_path(extra.id), :method=>'delete', :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :class=>'btn btn-danger' %>
               </td>
 
 
