se agrega campo revendedor

--- a/app/views/admin/customers/new.html.erb
+++ b/app/views/admin/customers/new.html.erb
@@ -89,7 +89,7 @@
 
 
               <%= f.label :typeuser, 'Tipo Usuario' %>
-              <%= f.select(:typeuser, [['Normal', 0], ['Vendedor', 1]], {}, { :class => 'form-control' }) %>
+              <%= f.select(:typeuser, [['Normal', 0], ['Revendedor', 1]], {}, { :class => 'form-control' }) %>
 
             </div>
           </div>
