--- a/app/views/pages/miservicios.html.erb
+++ b/app/views/pages/miservicios.html.erb
@@ -92,7 +92,7 @@
 
               <td>
                 <%= link_to 'Editar', miserviciosedit_path(servicio.id), :class=>'btn btn-info' %>
-                <!--<%= link_to 'Eliminar',miserviciosnew_path(servicio.id), :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :class=>'btn btn-danger' %>-->
+                <%= link_to 'Eliminar',miserviciosdelete_path(extra.id), :method=>'delete', :data => {:confirm => 'Estas seguro de eliminar este elemento?'}, :class=>'btn btn-danger' %>
               </td>
 
 
