--- a/app/views/admin/banners/new.html.erb
+++ b/app/views/admin/banners/new.html.erb
@@ -14,7 +14,7 @@
 <%  if @banner.errors.any? %>
     <div class="panel panel-danger">
       <div class="panel-heading">
-        <%= pluralize(@color.errors.count, "Errores") %> tratando de guardar:
+        <%= pluralize(@banner.errors.count, "Errores") %> tratando de guardar:
       </div>
       <p>
       <ul>
