se mejora el tamaño del banner

--- a/app/views/shared/_banners.html.erb
+++ b/app/views/shared/_banners.html.erb
@@ -23,13 +23,13 @@
 
 
     <div class="item bg-color">
-      <a href="<%= @banners[b1].url %>"><%= image_tag @banners[b1].picture(:medium ), :style=>'max-width:100%; width:100%' %></a>
+      <a href="<%= @banners[b1].url %>"><%= image_tag @banners[b1].picture(:medium), :style=>'max-width:100%; width:100%',  size: '300x300'  %></a>
       <br/><br/>
     </div><!-- /.item -->
 
 
     <div class="item bg-color">
-      <a href="<%= @banners[new].url %>"><%= image_tag @banners[new].picture(:medium ), :style=>'max-width:100%; width:100%' %></a>
+      <a href="<%= @banners[new].url %>"><%= image_tag @banners[new].picture(:medium ), :style=>'max-width:100%; width:100%',  size: '300x300' %></a>
       <br/><br/>
     </div><!-- /.item -->
 
