--- a/app/views/pages/tarifas.html.erb
+++ b/app/views/pages/tarifas.html.erb
@@ -55,6 +55,7 @@
           end
 
           %>
+          <!-- 
           <tr>
             <th>PRECIO</th>
             <td>
@@ -83,7 +84,7 @@
               </div>
             </td>
           </tr>
-
+          -->
           <tr>
             <th>DESCRIPCIÓN</th>
             <td><p class="text"><%= @planes[0].descripcion %></p></td>
@@ -92,7 +93,7 @@
             <td><p class="text"><%= @planes[3].descripcion %></p></td>
 
           </tr>
-
+<!-- 
           <tr >
             <th></th>
             <td class='text-center'><div class="action">
@@ -108,6 +109,7 @@
               <a class="lnk btn btn-primary" href="comprar.html?plan=<%= @planes[3].id %>">COMPRAR AHORA</a>
             </div></td>
           </tr>
+/.row -->
         </table>
       </div>
     </div>
