mejoras en el codigo para registrar usuarios

--- a/app/views/includes/_menuint.html.haml
+++ b/app/views/includes/_menuint.html.haml
@@ -11,7 +11,10 @@
         .cnt-block
           %ul.list-unstyled.list-inline
             %li.dropdown.dropdown-small
-              %a.dropdown-toggle{:href => "/mi-cuenta"} Mi Cuenta
+              - if session[:user]
+                %a.dropdown-toggle{:href => "/mi-cuenta"} Mi Cuenta
+              - else
+                %a.dropdown-toggle{:href => "/registrarse"} Registrarse
             %li.dropdown.dropdown-small
               %a.dropdown-toggle{:href => "/mi-cuenta"} Publicar Anuncio
             %li.dropdown.dropdown-small
