--- a/app/views/includes/_menu.html.haml
+++ b/app/views/includes/_menu.html.haml
@@ -19,7 +19,7 @@
               %li.dropdown.dropdown-small
                 %a.dropdown-toggle{:href => "/mi-cuenta"} Iniciar sesion
               %li.dropdown.dropdown-small
-                %a.dropdown-toggle{:href => ""} Registrarse
+                %a.dropdown-toggle{:href => registrar_usuario_sessions_path} Registrarse
             %li.dropdown.dropdown-small
               %a.dropdown-toggle{:href => "/mi-cuenta"} Publicar Anuncio
             %li.dropdown.dropdown-small
