se agrega mejora en la barra de session

--- a/app/views/includes/_menuint.html.haml
+++ b/app/views/includes/_menuint.html.haml
@@ -15,6 +15,8 @@
                 %a.dropdown-toggle{:href => logout_sessions_path } Cerrar sesion
               %li.dropdown.dropdown-small
                 %a.dropdown-toggle{:href => "/mi-cuenta"} Mi Cuenta
+              %li.dropdown.dropdown-small
+                %a.dropdown-toggle{:href => "/mi-cuenta"} Publicar Anuncio 
             - else
               %li.dropdown.dropdown-small
                 %a.dropdown-toggle{:href => "/mi-cuenta"} Iniciar sesion
