--- a/app/views/layouts/cliente.html.erb
+++ b/app/views/layouts/cliente.html.erb
@@ -4,8 +4,11 @@
   <title>Camion 365 - Mi cuenta</title>
   <% #stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 
-  <% javascript_include_tag 'application' %>
+  <%= javascript_include_tag 'application' %>
   <%= javascript_include_tag 'admin/js/jquery' %>
+  <%= javascript_include_tag 'jquery.js'%>
+  <%= javascript_include_tag 'inputmask.js'%>
+  <%= javascript_include_tag 'jquery.inputmask.js'%>
   <%= javascript_include_tag 'admin/js/bootstrap.min' %>
   <%= javascript_include_tag 'admin/angular.min' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
