--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>Camion 365</title>
   <% #stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 
-  <% javascript_include_tag 'application' %>
+  <%= javascript_include_tag 'application' %>
   <%= javascript_include_tag 'admin/js/jquery' %>
   <%= javascript_include_tag 'admin/js/bootstrap.min' %>
   <%= javascript_include_tag 'admin/angular.min' %>
