--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <meta name="keywords" content="MediaCenter, Template, eCommerce">
   <meta name="robots" content="all">
   <%= javascript_include_tag 'jquery.js'%>
+  <%= javascript_include_tag 'jquery.ui.js'%>
   <%= javascript_include_tag 'inputmask.js'%>
   <%= javascript_include_tag 'jquery.inputmask.js'%>
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
