--- a/app/views/layouts/cliente.html.erb
+++ b/app/views/layouts/cliente.html.erb
@@ -8,6 +8,7 @@
   <%= javascript_include_tag 'admin/js/jquery' %>
   <%= javascript_include_tag 'jquery.js'%>
   <%= javascript_include_tag 'inputmask.js'%>
+  <%= javascript_include_tag 'jquery.ui.js'%>
   <%= javascript_include_tag 'jquery.inputmask.js'%>
   <%= javascript_include_tag 'admin/js/bootstrap.min' %>
   <%= javascript_include_tag 'admin/angular.min' %>
