--- a/app/views/pages/micamionesedit.html.erb
+++ b/app/views/pages/micamionesedit.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col-lg-12">
     <h1 class="page-header">
-      Camiones <small>/ editar</small>
+      Camiones <small>/ Editar</small>
     </h1>
 
   </div>
