--- a/app/views/pages/micamionesnew.html.erb
+++ b/app/views/pages/micamionesnew.html.erb
@@ -18,7 +18,7 @@
                         <div class="col-md-6 col-xs-12 col-md-offset-3">
                             <div id="error_explanation">
                                 <h3>
-                                    <%= "#{pluralize(@truck.errors.count, "error")} #{'Evita que se salve el nuevo registro'}:" %>
+                                    <%= "#{pluralize(@truck.errors.count, "Error(es)")} #{'Evita(n) que se salve el nuevo registro'}:" %>
                                 </h3>
                                 <ul>
                                     <% @truck.errors.full_messages.each do |msg| %>
