--- a/app/views/pages/micuenta.html.erb
+++ b/app/views/pages/micuenta.html.erb
@@ -25,8 +25,9 @@
     end
 %>
 
+<%= render partial: "/includes/messages_errors", locals: {object:  @user} %>
 
-<% if !@user.offercustomers.blank? %>
+<% if @user_cargar_planes > 0 %>
 <div class="row">
 
 
