--- a/app/views/pages/mirepuestos.html.erb
+++ b/app/views/pages/mirepuestos.html.erb
@@ -36,7 +36,7 @@
 <div class="row">
   <div class="col-md-12">
     <p>
-      <% if extras-@extras.total_count > 0 %>
+      <% if  @user.cargar_planes > 0 && (extras-@extras.total_count > 0) %>
           <%= link_to 'Nuevo Repuesto', mirepuestosnew_path, :method=>'get', :class=>'btn  btn-primary' %>
 
       <% end %>
