--- a/app/views/pages/miservicios.html.erb
+++ b/app/views/pages/miservicios.html.erb
@@ -36,7 +36,7 @@
 <div class="row">
   <div class="col-md-12">
     <p>
-      <% if servicios-@servicios.total_count > 0 %>
+      <%  if  @user.cargar_planes > 0 && (servicios-@servicios.total_count > 0) %>
           <%= link_to 'Nuevo Servicio', miserviciosnew_path, :method=>'get', :class=>'btn  btn-primary' %>
 
       <% end %>
