--- a/app/views/admin/customers/new.html.erb
+++ b/app/views/admin/customers/new.html.erb
@@ -31,88 +31,9 @@
 
 
     <%= form_for @customer, :url => admin_customers_path, :method=>'post' do |f|  %>
+      
+      <%= render partial: "form", locals: {f: f} %>
 
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-
-              <%= f.label :name, 'Nombre' %>
-              <%= f.text_field :name, :class =>'form-control'  %>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="form-group">
-              <%= f.label :cedula, 'Cedula' %>
-              <%= f.text_field :cedula, :class =>'form-control'  %>
-            </div>
-          </div>
-
-        </div>
-
-
-
-
-
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-
-              <%= f.label :telefono, 'Telefono' %>
-              <%= f.text_field :telefono, :class =>'form-control'  %>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="form-group">
-              <%= f.label :email, 'Email' %>
-              <%= f.text_field :email, :class =>'form-control', :autocorrect=>'off' %>
-            </div>
-          </div>
-
-        </div>
-
-
-
-
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-
-              <%= f.label :clave, 'Clave' %>
-              <%= f.text_field :clave, :class =>'form-control',  :autocorrect=>'off'  %>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="form-group">
-
-
-              <%= f.label :typeuser, 'Tipo Usuario' %>
-              <%= f.select(:typeuser, Environment::TYPE[:clientes], {}, { :class => 'form-control' }) %>
-
-            </div>
-          </div>
-
-        </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <%= f.submit 'Guardar', :class=> 'btn btn-info' %>
-        <%=  link_to 'Cancelar', admin_customers_path, :class=>'btn btn-warning' %>
     <% end %>
 
   </div>
