--- a/app/views/pages/micamionesedit.html.erb
+++ b/app/views/pages/micamionesedit.html.erb
@@ -27,7 +27,7 @@
 
     <div class="col-md-12">
         <div class="row">
-            <%= form_for @truck, :url => micamioneseditpost_path, :method=>'post' do |f|  %>
+            <%= form_for @truck, :url => micamionesedit_path, :method=>'get' do |f|  %>
                 <% if @truck.errors.any? %>
                   <div class="alert alert:danger">
                     <div class="col-md-6 col-xs-12 col-md-offset-3">
@@ -53,7 +53,7 @@
                 <% if @lateUpdate %>
                   <ul class="nav nav-tabs" role="tablist">
                     <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Paso 1</a></li>
-                    
+
                   </ul>
 
                   <br/><br/>
