--- a/app/views/pages/mirepuestosedit.html
+++ b/app/views/pages/mirepuestosedit.html
@@ -9,158 +9,127 @@
 
 
 <div class="row">
-  <div class="col-md-12">
 
+    <%= form_for @extra, :url => mirepuestosedit_path , :method=> 'post' do |f|  %>
 
-  <%= form_for @extra, :url => mirepuestosedit_path , :method=> 'post' do |f|  %>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= f.label :name, 'Nombre de repuesto' %>
-          <%= f.text_field :name, :class =>'form-control'  %>
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= f.label :price, 'Precio' %>
-          <%= f.text_field :price, :class =>'form-control'  %>
-        </div>
-      </div>
-
-    </div>
-
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= f.label :address, 'Dirección' %>
-          <%= f.text_field :address, :class =>'form-control'  %>
-        </div>
-      </div>
-
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= f.label :horario, 'Horario' %>
-          <%= f.text_field :horario, :class =>'form-control'  %>
-        </div>
-      </div>
-
-    </div>
-
-
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= f.label :phone, 'Teléfono' %>
-          <%= f.text_field :phone, :class =>'form-control'  %>
-        </div>
-      </div>
-
-    </div>
-
-
-
-
-
-    <div class="row">
-
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= f.label :type_truck_id, 'Tipo de camion' %>
-          <%= f.collection_select :type_truck_id, TypeTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
-        </div>
-      </div>
-
-      <div class="col-md-6">
-
-        <div class="form-group">
-          <%= f.label :brand_extra_id, 'Marca de camion' %>
-          <%= f.collection_select :brand_extra_id, BrandExtra.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
-        </div>
-      </div>
-
-
-
-    </div>
-
-
-
-
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <%= f.label :state_id, 'Departamento' %>
-          <%= f.collection_select :state_id, State.order(:id),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
-        </div>
-      </div>
-
-
-            <div class="col-md-6">
-              <div class="form-group">
-                <%= f.label :city_id, 'Ciudad' %>
-                <%= f.collection_select :city_id, @cities.order(:name),:id,:name, {}, { class: 'form-control'} %>
-              </div>
+        <!--nombre repuesto y tipo de camion-->
+        <div class="row">
+            <div class="col-md-5 col-md-offset-1">
+                <div class="form-group">
+                    <%= f.label :name, 'Nombre de repuesto' %>
+                    <%= f.text_field :name, :class =>'form-control'  %>
+                </div>
             </div>
 
+            <div class="col-md-5">
+                <div class="form-group">
+                    <%= f.label :type_trucks_id, 'Tipo de camion' %>
+                    <%= f.collection_select :type_trucks_id, TypeTruck.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                </div>
+            </div>
+        </div>
+        <!--precio y marca-->
+        <div class="row">
+        <div class="col-md-5 col-md-offset-1">
+            <div class="form-group">
+                <%= f.label :price, 'Precio' %>
+                <%= f.text_field :price, :class =>'form-control'  %>
+            </div>
+        </div>
 
+        <div class="col-md-5">
 
+            <div class="form-group">
+                <%= f.label :brand_extra_id, 'Marca de Repuesto' %>
+                <%= f.collection_select :brand_extra_id, BrandExtra.order(:name),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+            </div>
+        </div>
     </div>
-
-
-
-
-
-    <div class="row">
-      <div class="col-md-2">
-        <div class="form-group">
-          <%= f.label :picture1, 'Imagen 1' %>
-          <%= f.file_field :picture1, :class =>'form-control'  %>
-
-
-
+        <!--Telefono y Horario-->
+        <div class="row">
+        <div class='col-md-5 col-md-offset-1'>
+            <div class="form-group">
+                <%= f.label :phone, 'Teléfono' %>
+                <%= f.text_field :phone, :class =>'form-control'  %>
+            </div>
         </div>
-      </div>
-
-      <div class="col-md-2">
-        <div class="form-group">
-          <%= f.label :picture2, 'Imagen 2' %>
-          <%= f.file_field :picture2, :class =>'form-control'  %>
+        <div class="col-md-5">
+            <div class="form-group">
+                <%= f.label :horario, 'Horario' %>
+                <%= f.text_field :horario, :class =>'form-control'  %>
+            </div>
         </div>
-      </div>
-
-      <div class="col-md-2">
-        <div class="form-group">
-          <%= f.label :picture3, 'Imagen 3' %>
-          <%= f.file_field :picture3, :class =>'form-control'  %>
-        </div>
-      </div>
-
-      <div class="col-md-2">
-        <div class="form-group">
-          <%= f.label :picture4, 'Imagen 4' %>
-          <%= f.file_field :picture4, :class =>'form-control'  %>
-        </div>
-      </div>
-
-      <div class="col-md-2">
-        <div class="form-group">
-          <%= f.label :picture5, 'Imagen 5' %>
-          <%= f.file_field :picture5, :class =>'form-control'  %>
-        </div>
-      </div>
     </div>
+        <!--Direccion-->
+        <div class="row">
 
+            <div class="col-md-5 col-md-offset-1">
+                <div class="form-group">
+                    <%= f.label :address, 'Dirección' %>
+                    <%= f.text_field :address, :class =>'form-control'  %>
+                </div>
+            </div>
+        </div>
+        <!--Departamento y ciudad-->
+        <div class="row">
+            <div class="col-md-5 col-md-offset-1">
+                <div class="form-group">
+                    <%= f.label :state_id, 'Departamento' %>
+                    <%= f.collection_select :state_id, State.order(:id),:id,:name, {prompt: 'Selecccione'}, {class: 'form-control'} %>
+                </div>
+            </div>
 
+            <div class="col-md-5">
+                <div class="form-group">
+                    <%= f.label :city_id, 'Ciudad' %>
+                    <%= f.collection_select :city_id, @cities.order(:name),:id,:name, {}, { class: 'form-control'} %>
+                </div>
+            </div>
+        </div>
+        <!-- Imagenes -->
+        <div class="row">
+            <div class="col-md-2 col-md-offset-1">
+                <div class="form-group">
+                    <%= f.label :picture1, 'Imagen 1' %>
+                    <%= f.file_field :picture1, :class =>'form-control'  %>
+                </div>
+            </div>
 
+            <div class="col-md-2">
+                <div class="form-group">
+                    <%= f.label :picture2, 'Imagen 2' %>
+                    <%= f.file_field :picture2, :class =>'form-control'  %>
+                </div>
+            </div>
 
+            <div class="col-md-2">
+                <div class="form-group">
+                    <%= f.label :picture3, 'Imagen 3' %>
+                    <%= f.file_field :picture3, :class =>'form-control'  %>
+                </div>
+            </div>
 
+            <div class="col-md-2">
+                <div class="form-group">
+                    <%= f.label :picture4, 'Imagen 4' %>
+                    <%= f.file_field :picture4, :class =>'form-control'  %>
+                </div>
+            </div>
 
-    <div class="row">
-      <div class="col-md-12">
-        <%= f.label :description, 'Descripccion' %>
-        <%= f.text_area :description, :class =>'form-control'  %> <br/> <br/> <br/> <br/>
-      </div>
-    </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <%= f.label :picture5, 'Imagen 5' %>
+                    <%= f.file_field :picture5, :class =>'form-control'  %>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                <%= f.label :description, 'Descripccion' %>
+                <%= f.text_area :description, :class =>'form-control'  %> <br/> <br/> <br/> <br/>
+            </div>
+        </div>
 
 
 
