se mejoran contadores en la aplicacion de los clientes normales

--- a/app/views/pages/micuenta.html.erb
+++ b/app/views/pages/micuenta.html.erb
@@ -10,28 +10,14 @@
 </div>
 
 
-<%
-   camiones = 0
-   repuestos = 0
-   servicios = 0
-
-
-   @user.offer.each do |item|
-
-     camiones = camiones + item.trucks
-     repuestos = repuestos + item.extra
-     servicios = servicios + item.service
-
-    end
-%>
-
 <%= render partial: "/includes/messages_errors", locals: {object:  @user} %>
 
 <% if @user_cargar_planes > 0 %>
 <div class="row">
 
+<% quantity =  @user.quantities.first  %>
 
-    <% if camiones > 0 %>
+<% if quantity.total_trucks > 0 %>
   <div class="col-lg-3 col-md-6">
     <div class="panel panel-primary">
       <div class="panel-heading">
@@ -40,7 +26,7 @@
             <i class="fa fa-car fa-5x"></i>
           </div>
           <div class="col-xs-9 text-right">
-            <div class="huge"><small> <%= camiones-@user.trucks.count %></small>/<%= camiones %></div>
+            <div class="huge"><small> <%= quantity.current_trucks %></small>/<%= quantity.total_trucks %></div>
             <div>Camiones</div>
           </div>
         </div>
@@ -54,11 +40,10 @@
       </a>
     </div>
   </div>
+<% end %>
 
-      <% end %>
 
-
-  <% if repuestos > 0 %>
+  <% if quantity.total_extras > 0 %>
   <div class="col-lg-3 col-md-6">
     <div class="panel panel-green">
       <div class="panel-heading">
@@ -67,7 +52,7 @@
             <i class="fa fa-tasks fa-5x"></i>
           </div>
           <div class="col-xs-9 text-right">
-            <div class="huge"> <%= repuestos-@user.extras.count %></small>/<%= repuestos %></div>
+            <div class="huge"><small> <%= quantity.current_extras %></small>/<%= quantity.total_extras %></div>
             <div>Repuestos</div>
           </div>
         </div>
@@ -84,7 +69,7 @@
 
   <% end %>
 
-  <% if servicios > 0 %>
+  <% if quantity.total_services > 0 %>
   <div class="col-lg-3 col-md-6">
     <div class="panel panel-yellow">
       <div class="panel-heading">
@@ -93,7 +78,7 @@
             <i class="fa fa-shopping-cart fa-5x"></i>
           </div>
           <div class="col-xs-9 text-right">
-            <div class="huge"> <%= servicios-@user.services.count %></small>/<%= servicios %></div>
+            <div class="huge"><small> <%= quantity.current_services %></small>/<%= quantity.total_services %></div>
             <div>Servicios</div>
           </div>
         </div>
