--- a/app/views/pages/mirepuestosedit.html.erb
+++ b/app/views/pages/mirepuestosedit.html.erb
@@ -33,7 +33,7 @@
         <div class="col-md-5 col-md-offset-1">
             <div class="form-group">
                 <%= f.label :price, 'Precio' %>
-                <%= f.text_field :price, :class =>'form-control'  %>
+                <%= f.number_field :price, :class =>'form-control text_field'  %>
             </div>
         </div>
 
