--- a/app/views/pages/micamionesedit.html.erb
+++ b/app/views/pages/micamionesedit.html.erb
@@ -24,6 +24,7 @@
       </div>
 
   <% end %>
+</div>
 
     <div class="col-md-12">
         <div class="row">
@@ -71,7 +72,7 @@
                             <div class="col-md-6 col-md-offset-3">
                                 <div class="form-group">
                                     <%= f.label :price, 'Precio' %>
-                                    <%= f.text_field :price, :class =>'form-control'  %>
+                                    <%= f.number_field :price, :class =>'form-control text_field'  %>
                                 </div>
                             </div>
                         </div>
@@ -156,7 +157,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <%= f.label :price, 'Precio' %>
-                                    <%= f.text_field :price, :class =>'form-control'  %>
+                                    <%= f.number_field :price, :class =>'form-control text_field'  %>
                                 </div>
                             </div>
 
@@ -164,7 +165,7 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <%= f.label :pesobruto, 'Peso bruto' %>
-                                    <%= f.text_field :pesobruto, :class =>'form-control'  %>
+                                    <%= f.number_field :pesobruto, :class =>'form-control text_filed'  %>
                                 </div>
                             </div>
                         </div>
